# phyddle

./: .buildinfo  .bumpversion.cfg  .gitignore  CNAME  DEVGUIDE.md  LICENSE  README.md  UPDATES.md  about.html  appendix.html  build.sh  configuration.html  examples.html  formats.html  genindex.html  glossary.html  index.html  installation.html  objects.inv  overview.html  pipeline.html  pyproject.toml  quick_start.html  search.html  searchindex.js  tricks.html  tutorial.html  updates.html  workspace.html
.doctrees/: about.doctree  appendix.doctree  configuration.doctree  environment.pickle  examples.doctree  formats.doctree  glossary.doctree  index.doctree  installation.doctree  overview.doctree  pipeline.doctree  quick_start.doctree  tricks.doctree  tutorial.doctree  updates.doctree  workspace.doctree
.github/workflows/: documentation.yml  phyddle-tests.yml  tests.yml
_sources/: appendix.rst.txt  configuration.rst.txt  examples.rst.txt  index.rst.txt  installation.rst.txt  overview.rst.txt  pipeline.rst.txt  tutorial.rst.txt  updates.rst.txt
_static/css/: custom.css
code/: ContTraitModel.py  Encoding.py  Formatting.py  GeosseModel.py  InputFormatter.py  Learner.py  Learning.py  Model.py  ModelLoader.py  Plotting.py  Predicting.py  README.md  Simulating.py  Simulator.py  SirmModel.py  Utilities.py  cdvs_util.py  clean_model.sh  clean_project.sh  cnn_utilities.py  config.py  config_cont.py  config_de.py  config_sirm.py  example_generate_rxn.py  formatter.py  generate_rxn.py  geosse_model.py  geosse_model_util.py  model.py  model_config.py  model_util.py  phyddle_config.py  phyddle_util.py  prepare_training_data.py  prepare_training_data_orig.py  run_encode.py  run_format.py  run_learn.py  run_pipeline.py  (+11 more)
code/Models/: GeosseModel.py  SirmModel.py
code/old/: generate_rxn.py  simulate_training_data.py  simulate_training_data.py.bak  train_rates_cnn.py  train_rates_cnn_torch.py
code/old2/: OLD_README.md  cnn_utilities.py.bak  sirm_model_util.py
conda/: meta.yaml
configs/: config_BDD.py  config_R.py  config_SIR.py  config_bdk_master.py  config_bisse_r.py  config_bisse_timehet_pj.py  config_default.py  config_geosse_master.py  config_geosse_revbayes.py  config_sir_master.py
docs/: README.md
docs/example/: cblvs.tre  out.txt
docs/source/: .about.rst.swp  .conf.py.swp  .index.rst.swp  about.rst  appendix.rst  conf.py  configuration.rst  data_formats.rst  developer_guide.rst  files_types.rst  formats.rst  glossary.rst  index.rst  installation.rst  overview.rst  pipeline.rst  quick_guide.rst  quick_start.rst  settings.rst  tricks.rst  tutorial.rst  updates.rst  usage.rst  user_guide.rst  workspace.rst  workspace_directories.rst
formatted_data/: README.md
model/: README.md
model/geosse_v1/: sim_16_20_normalization_label_mean_sd.csv
network/: README.md
network/example/: sim_batchsize128_numepoch20_nt500.test_labels.csv  sim_batchsize128_numepoch20_nt500.test_pred.csv  sim_batchsize128_numepoch20_nt500.test_pred_nocalib.csv  sim_batchsize128_numepoch20_nt500.train_pred_nocalib.csv  sim_batchsize128_numepoch20_nt500.train_summ_stat_norm.csv
plot/: README.md
predict/: README.md
predict/example/: new.1.extant.tre  new.1.summ_stat.csv  new.1.tre
raw_data/: README.md
raw_data/example/: README.md  sim.0.param_col.csv  sim.1.json  sim.1.param_col.csv  sim.1.summ_stat.csv  sim.1.xml  sim.10.dat.nex  sim.10.extant.tre  sim.10.info.csv  sim.10.json  sim.10.param_col.csv  sim.10.summ_stat.csv  sim.10.tre  sim.11.param_row.csv  sim.13.param_col.csv  sim.13.phy.nex  sim.13.tre  (+36 more)
scripts/: __config_default.py  clean_project.sh  config.py  config_BDD.py  config_MASTER.py  config_MASTER.py.bak  config_PJ.py  config_R.py  config_R_batch.py  config_Rev.py  config_SIR.py  config_SIRM.py  config_cont.py  config_discrete_R.py  config_sirm.py  download_all.sh  download_networks.sh  download_plots.sh  download_tensors.sh  make_fake_est_dataset.sh  nb_phyddle.ipynb  run_format.py  run_learn.py  run_phyddle.py  run_pipeline.py  run_plot.py  run_predict.py  run_simulate.py  sim_one.R  sim_one_discrete.R
tensor_data/: README.md
tests/: README.md  __config_default.py  config.py  regenerate.py  sim_one.R  test_estimate.py  test_format.py  test_import.py  test_phyddle.py  test_pipeline.py  test_pipeline_MASTER_simple.py  test_plot.py  test_simulate.py  test_train.py  test_utilities.py
workspace/: README.md
(+7772 files in other folders)
