[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phyddle"
version = "0.0.9"
authors = [
  { name="Michael Landis", email="michael.landis@wustl.edu" },
  { name="Ammon Thompson", email="ammonthompson@gmail.com" },
]
description = "Software to fiddle around with deep learning for phylogenetic models"
readme = "README.md"

requires-python = ">=3.7"

dependencies = [
  "dendropy",
  "graphviz",
  "h5py",
  "keras",
  "matplotlib",
  "numpy",
  "pandas",
  "pydot",
  "pypdf",
  "scikit-learn",
  "scipy",
  "tensorflow",
  "tqdm"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Natural Language :: English"
]

[project.scripts]
phyddle = "phyddle.command_line:run"

[project.urls]
"Homepage" = "https://github.com/mlandis/phyddle"
"Bug Reports" = "https://github.com/mlandis/phyddle/issues"
"Documentation" = "https://mlandis.github.io/phyddle"

[tool.ruff]
# maximum line length
line-length = 400
# skip unused variable rules (`F841`)
extend-ignore = ["F841"]

