[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phyddle"
version = "0.3.0"
authors = [
  { name="Michael Landis", email="michael.landis@wustl.edu" },
  { name="Ammon Thompson", email="ammonthompson@gmail.com" },
]
description = "Software for phylogenetic model exploration with deep learning"
readme = "README.md"

requires-python = ">=3.12"

dependencies = [
  "dendropy>=4.6.0",
  "graphviz>=0.20.0",
  "h5py>=3.10.0",
  "matplotlib>=3.8.2",
  "numpy>=1.26.4",
  "pandas>=2.2.0",
  "pydot>=2.0.0",
  "pypdf>=4.0.0",
  "Pillow>=11.0.0",
  "scikit-learn>=1.4.0",
  "scipy>=1.14.0",
  "torch>=2.2.0",
  "torchview>=0.2.6",
  "tqdm>=4.66.1"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Natural Language :: English"
]

[project.scripts]
phyddle = "phyddle.command_line:run"

[project.urls]
"Homepage" = "https://github.com/mlandis/phyddle"
"Bug Reports" = "https://github.com/mlandis/phyddle/issues"
"Documentation" = "https://mlandis.github.io/phyddle"

[tool.ruff]
# maximum line length
line-length = 400
# skip unused variable rules (`F841`)
extend-ignore = ["F841"]

[tool.hatch.build]
exclude = ["conda/**", "docs/**", "scripts/**", "tests/**", "workspace/**"]
